--- a/bme.html
+++ b/bme.html
@@ -9,7 +9,8 @@
     <img src="https://images.squarespace-cdn.com/content/57b21b67197aea37dfb7c157/1571627914942-PMEF6ISFIQILU7O3C3OX/Breast-Cancer-Ribbon-PNG-Image.png?content-type=image%2Fpng" height="100" alt="Image of Breast Cancer Awareness Ribbon" title="Breast Cancer Awareness">
     <h2>This website is designed to take in data about a patient's biospy and quickly analyze it for different stages and types of breast cancer.</h2>
     <p> For each of the following boxes, please input the corresponding data about the patient's biopsy: </p>
-    <label for="Radius of Biopsy">Radius:</label>
+    <form>
+        <label for="Radius of Biopsy">Radius:</label>
         <input type="text" id="Radius of Biopsy" name="Radius of Biopsy"><br>
 
         <label for="Texture of Biopsy">Texture:</label>
